fix issue of pink showing behind featured images

--- a/css/styles.css
+++ b/css/styles.css
@@ -30,11 +30,13 @@ body, html {
 
 
 .featured-text{
+  width: 100%;
   position: absolute;
   bottom: 0px;
   left: 0px;
   color: white;
   padding: 10px;
+  /*background: linear-gradient;*/
 }
 .article {
   overflow: auto;
@@ -59,10 +61,6 @@ body, html {
 
 /*sm / tablet*/
 @media screen and (min-width: 768px) {
-  .container {
-    background-color:lightblue;
-
-  }
 
     .featured-img {
       width: 100%;
@@ -71,7 +69,6 @@ body, html {
 
   .box { /*applied to articles and featureds to give them the same height*/
     height: 300px;
-    /*border: 3px dashed blue;*/
   }
 
   .article-img-wrapper {
@@ -100,9 +97,6 @@ body, html {
 }
 
 @media screen and (min-width: 992px) {
-  .container {
-    background-color: brown;
-  }
 
   .featured-img {
     height: 100%;
@@ -110,31 +104,3 @@ body, html {
   }
 
 }
-
-
-@media screen and (min-width: 1200px) {
- /*body {
-   background-color: purple;
- }*/
-
-  #raekwon {
-    width: 100%;
-    height: auto;
-  }
-
-}
-
-/*.article-bootstrap {
-  background-color: white;
-}
-.article-img-bootstrap {
-  width: 100%;
-  max-width: 128px;
-  min-width: 100px;
-  padding: 1rem;
-}
-
-.article-text-bootstrap {
-  margin-left: -15px;
-  margin-right: 15px;
-}*/
